# wsNFCepaper

./: .gitignore  CMakeLists.txt  Makefile  README.md  epnfcup.c
cmake/Modules/: FindLIBNFC.cmake
